2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs,
	  MonoDevelop.Ide.addin.xml, MonoDevelop.Ide.Gui/Workbench.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs, MonoDevelop.Ide.Gui/Ide.cs:
	  Removed the CommandService class. Everything is done directly with
	  CommandManager. Moved all extension node types to MD.Components.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs, gtk-gui/gui.stetic,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs: The folder
	  entry in the new project dialog can now be loaded by stetic, no need to
	  create it from code.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Templates/FileTemplate.cs,
	  MonoDevelop.Ide.Templates/FileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/ICombineEntryFeature.cs,
	  MonoDevelop.Ide.Templates/ProjectTemplate.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/MethodNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/EventNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/FieldNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/PropertyNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/ClassNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/ProjectNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/CombineNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/NamespaceNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/CombineNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectReferenceFolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/UnknownEntryNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ResourceFolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs,